<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/paymentinfolayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:background="@drawable/info"
    android:orientation="vertical"
    tools:context=".Paymentinfo">

    <TextView

        android:id="@+id/paymentinfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp"
        android:fontFamily="sans-serif-black"
        android:orientation="horizontal"
        android:shadowColor="#ffffff"
        android:text="@string/paymentinfo"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginBottom="0dp">


    <LinearLayout

        android:id="@+id/paymentinfolayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="#D0FFFFFF"
        android:isScrollContainer="true"
        android:orientation="vertical">


        <LinearLayout

            android:id="@+id/paymentinfolayout3"
            android:layout_width="match_parent"
            android:layout_height="83.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <TextView

                android:id="@+id/paymentinfoshipaddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/paymentinfoshipaddress"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="30sp"

                ></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout4"
            android:layout_width="wrap_content"
            android:layout_height="83.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/paymentinfofirstname"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/paymentinfofirstname" />

            <EditText
                android:id="@+id/paymentinfolastname"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/paymentinfolastname" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout5"
            android:layout_width="match_parent"
            android:layout_height="83.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/paymentinfoemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/paymentinfoemail" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout6"
            android:layout_width="match_parent"
            android:layout_height="83.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/paymentinfoaddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:text="@string/paymentinfoaddress" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout7"
            android:layout_width="match_parent"
            android:layout_height="83.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/paymentinfocountry"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/paymentinfocountry" />

            <EditText
                android:id="@+id/paymentinfopostalcode"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/paymentinfopostalcode" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout8"
            android:layout_width="match_parent"
            android:layout_height="83.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/paymentinfophone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/paymentinfophone"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout9"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/paymentinfoconfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/paymentinfoconfirm"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/paymentinfolayout10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/paymentbtncontinue"
                android:layout_width="300dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/paymentbtncontinue">

            </Button>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutend"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        </LinearLayout>

    </LinearLayout>
    </ScrollView>
</LinearLayout>