<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg10"
    tools:context=".Entertainment">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="53dp"
        android:layout_height="46dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_send"
        tools:layout_editor_absoluteY="556dp" />

    <LinearLayout
        android:layout_width="420dp"
        android:layout_height="242dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132">

        <TextView
            android:id="@+id/topic3"
            android:layout_width="400dp"
            android:layout_height="67dp"
            android:layout_marginTop="68dp"
            android:text="@string/ent"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="353dp"
        android:layout_marginStart="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.692">

        <Button
            android:id="@+id/quote_btn"
            android:layout_width="308dp"
            android:layout_height="85dp"
            android:text="@string/quote"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="59dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/cartoon_btn"
            android:layout_width="304dp"
            android:layout_height="87dp"
            android:text="@string/cartoon"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="339dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:orientation="vertical"></LinearLayout>

        <Button
            android:id="@+id/video_btn"
            android:layout_width="308dp"
            android:layout_height="87dp"
            android:text="@string/videos"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="64dp"
            tools:layout_editor_absoluteY="467dp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>