<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration"
    android:background="@drawable/bg7"
    android:visibility="visible">

    <TextView
        android:id="@+id/topic1"
        android:layout_width="204dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/reg"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="120dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/name"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etname"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/email"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etemail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv" />

    <TextView
        android:id="@+id/phn_no_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/pno"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etphone"
        app:layout_constraintHorizontal_bias="0.357"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_tv" />

    <TextView
        android:id="@+id/user_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/user"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etuser"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phn_no_tv" />

    <TextView
        android:id="@+id/pwd_tv"
        android:layout_width="135dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/pwd1"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_tv" />

    <TextView
        android:id="@+id/c_pwd_tv"
        android:layout_width="193dp"
        android:layout_height="62dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/pwd2"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/etcpwd"
        app:layout_constraintHorizontal_bias="0.235"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwd_tv" />

    <EditText
        android:id="@+id/etname"
        android:layout_width="204dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/name_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="209dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textEmailAddress"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/email_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etphone"
        android:layout_width="217dp"
        android:layout_height="52dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="phone"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/phn_no_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etuser"
        android:layout_width="212dp"
        android:layout_height="51dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPersonName"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etpwd"
        android:layout_width="209dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPassword"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/pwd_tv"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/create_btn"
        android:layout_width="272dp"
        android:layout_height="57dp"
        android:fontFamily="sans-serif-black"
        android:shadowColor="#ffffff"
        android:text="@string/create"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <EditText
        android:id="@+id/etcpwd"
        android:layout_width="203dp"
        android:layout_height="55dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:inputType="textPassword"
        android:shadowColor="#ffffff"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/c_pwd_tv"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>