<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p6"
    android:orientation="vertical"
    tools:context=".updatenewspaper">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <TextView
            android:id="@+id/updatenewspapers"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/updatenewspaper"
            android:textColor="#E91E63"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="0dp">


        <EditText
            android:id="@+id/newspapername1"
            android:layout_width="400dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/newspapername"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="134dp" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="152dp"
            android:layout_height="141dp"
            android:layout_marginLeft="-200dp"
            android:layout_marginTop="150dp"
            android:layout_weight="0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="87dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-300dp"
            android:layout_marginBottom="-50dp"
            android:text="@string/image"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="200dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="152dp"
            android:layout_height="141dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="10dp"
            android:layout_weight="0"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="108dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="-300dp"
            android:layout_marginBottom="50dp"
            android:layout_weight="0"
            android:text="@string/image"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>